fix timing bug:update default clock model + updating strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="LAP_STOPPED">Lap/Stopped</string>
 
     <!-- String  -->
-    <string name="INCREMENTING">Setting Time</string>
+    <string name="INCREMENTING">Incrementing</string>
     <string name="ALARM">ALARM!</string>
 
 </resources>
